--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   cupertino_icons: ^1.0.8
+
+  flame: ^1.19.0
+  flame_audio: ^2.10.3
+  logger: ^2.4.0
 
 dev_dependencies:
   flutter_test:
@@ -21,4 +24,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-
+  assets:
+    - assets/audio/
+    - assets/images/
