--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flame: ^1.19.0
   flame_audio: ^2.10.3
   logger: ^2.4.0
+  flame_lottie: ^0.4.2
 
   path: any
 dev_dependencies:
@@ -26,5 +27,11 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/audio/
     - assets/images/
+    - assets/images/Home/
+    - assets/images/Splash/
+    - assets/audio/
+    - assets/audio/Home/
+    - assets/audio/Splash/
+    - assets/lottie/
+    - assets/lottie/Common/
