--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flame_audio: ^2.10.3
   logger: ^2.4.0
   flame_lottie: ^0.4.2
+  flame_splash_screen: ^0.3.1
 
   path: any
 dev_dependencies:
@@ -28,12 +29,14 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
-    - assets/images/Home/
     - assets/images/Splash/
+    - assets/images/Game/
+    - assets/images/Game/Kylin/
     - assets/images/Map/
     - assets/images/Map/Building/
     - assets/audio/
-    - assets/audio/Home/
     - assets/audio/Splash/
+    - assets/audio/Game/
+    - assets/audio/Game/Kylin/
     - assets/lottie/
     - assets/lottie/Common/
