--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,10 @@ dependencies:
   logger: ^2.4.0
   flame_lottie: ^0.4.2
   flame_splash_screen: ^0.3.1
+  # 事件总线
+  event_bus: ^2.0.0
+  # 缓存
+#  shared_preferences: ^2.2.2
 
   path: any
 dev_dependencies:
@@ -32,6 +36,7 @@ flutter:
     - assets/images/Splash/
     - assets/images/Game/
     - assets/images/Game/Kylin/
+    - assets/images/Common/
     - assets/images/Map/
     - assets/images/Map/Building/
     - assets/audio/
