feat: kylin keyevent.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,4 +44,5 @@ flutter:
     - assets/audio/Game/
     - assets/audio/Game/Kylin/
     - assets/lottie/
+    - assets/lottie/Kylin/
     - assets/lottie/Common/
